fixed drop down menu to align on right

--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -14,3 +14,16 @@
     border-radius: 0.8rem;
     display: block;
 }
+
+.navbar .navbar-nav {
+    text-align: right;
+
+  }
+
+  .stock-search-heade {
+      color: white;
+  }
+
+  .nav-link {
+      display: block;
+  }
